fix layout make guess on small devices

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -128,6 +128,9 @@ footer {
   &.active {
     background: $color-active;
   }
+  &.readOnly {
+    align-items: center;
+  }
 }
 
 .task-card {
@@ -163,6 +166,13 @@ footer {
 .match-panel {
   display: flex;
   flex-direction: row;
+  & .tableau {
+    width: auto;
+    min-width: 10rem;
+  }
+  & .task-card {
+    width: auto;
+  }
 }
 
 .dragging {
